register & login -> css blurry wrapper fixed and button @output + warning remove for 0px

--- a/learn-studio-front/src/app/pages/authentification/register/register.component.scss
+++ b/learn-studio-front/src/app/pages/authentification/register/register.component.scss
@@ -49,9 +49,9 @@
       padding: 0.5em;
       font-weight: bold;
       font-size: small;
-      box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-      -webkit-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
-      -moz-box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+      box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+      -webkit-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
+      -moz-box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.75);
       cursor: pointer;
     }
 
@@ -68,8 +68,8 @@
   color: $blurryWrapperBox;
   z-index: 3;
   position: absolute;
-  top: 0px;
-  right: 0px;
+  top: 0;
+  right: 0;
   transform: translate(50%, -50%);
   cursor: pointer;
   background-color: $shadedBlueLink;
